# adaptive-parallel-multimerge-sort

./: .gitignore  .gitinore  Cargo.toml  README.md
benches/: arena_paralela.rs  my_benchmark.rs
src/: lib.rs  main.rs  multimerge.rs
tests/: integracao.rs
